# tasklist

./: .gitignore  CMakeLists.txt  README.md  config.h  main.c
core/: CMakeLists.txt  core_path_config.h  core_path_config.h.in  task.c  task.h  tasklist.c  tasklist.h  tasklist_serializer.c  tasklist_serializer.h  tasklists-container.c  tasklists-container.h
gui/: CMakeLists.txt  addTaskDialog.c  addTaskDialog.h  config.h.in  editTaskDialog.c  editTaskDialog.h  gui.gresource.xml  mainwindow.c  mainwindow.h  path_config.h  path_config.h.in  tasklistbox.c  tasklistbox.h  tasksboxlist.c  tasksboxlist.h  timeSpinButton.c  timeSpinButton.h  utils.c  utils.h
gui/css/: mainwindow.css
gui/ui/: addtaskdialog.ui  dialogwindow.ui  edittaskdialog.ui  listboxrow.ui  mainwindow.ui
